--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "bootstrap": "^4.4.1",
     "hammerjs": "^2.0.8",
     "ngx-toastr": "^10.2.0",
     "rxjs": "~6.4.0",
